--- a/src/public/sass/components/_stackView.scss
+++ b/src/public/sass/components/_stackView.scss
@@ -125,6 +125,7 @@
     color: #888;
     max-width: 700px;
     text-align: center;
+    text-wrap: balance;
   }
 
   .stackCertificado {
